k8s/admin-ui-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-ui-deployment
  namespace: auth-system
  labels:
    app: admin-ui
spec:
  replicas: 2
  selector:
    matchLabels:
      app: admin-ui
  template:
    metadata:
      labels:
        app: admin-ui
    spec:
      containers:
        - name: admin-ui
          image: avishkarlakade/auth-admin:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
