k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: frontend-deployment
  namespace: auth-system
spec:
  replicas: 1
  selector: 
    matchLabels: 
      app: frontend
  template: 
    metadata: 
      name: frontend-pod
      namespace: auth-system
      labels: 
        app: frontend
    spec:
      containers:
      - name: auth-frontend
        image: avishkarlakade/auth-frontend:latest
        ports:
          - containerPort: 80
