k8s/mongodb-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: mongodb-deployment
  namespace: auth-system
spec:
  replicas: 1
  selector: 
    matchLabels: 
      app: mongodb
  template: 
    metadata: 
      name: mongodb-pod
      namespace: auth-system
      labels: 
        app: mongodb
    spec:
      containers:
      - name: auth-mongodb
        image: mongo:latest
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-data
          mountPath: /data/db
      volumes:
      - name: mongo-data
        persistentVolumeClaim: 
          claimName: mongodb-pvc
