k8s/admin-ui-service.yml
apiVersion: v1
kind: Service
metadata:
  name: admin
  namespace: chat-app
spec:
  selector:
    app: admin
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
