k8s/admin-ui-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: admin-ui
  namespace: auth-system
  labels:
    app: admin-ui
spec:
  type: NodePort
  selector:
    app: admin-ui
  ports:
    - port: 80
      targetPort: 80
      nodePort: 3001
