k8s/backend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: auth-system
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - port: 5000
      targetPort: 5000
