k8s/mongodb-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: auth-system
  labels:
    app: mongodb
spec:
  type: ClusterIP
  selector:
    app: mongodb
  ports:
    - port: 27017
      targetPort: 27017
